# bubblegum

./: .gitignore  pyproject.toml  readme.md
bubble-backend/: README.md  pyproject.toml
bubble-backend/bubble_backend/: adhoc.py  api.py  constants.py  data.json  selectors_.py  transactions_case.csv  utils.py
bubble-frontend/: package-lock.json  package.json
bubble-frontend/.parcel-cache/: 5350436211165b0b-BundleGraph-0  7f973df67467291d-AssetGraph-0  d0d4aa4a0c5416be-AssetGraph-0  lock.mdb  requestGraph-90119cf973c747f0-0  requestGraph-nodes-0-90119cf973c747f0-0  snapshot-90119cf973c747f0.txt
bubble-frontend/src/: ignite_matrix.ts  index.html
bubble-frontend/src/app/: page.tsx
