[tool.poetry]
name = "bubble-backend"
version = "0.1.0"
description = ""
authors = ["Per Carlsen <per.carlsen@oda.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.5.0"
fastapi = "^0.111.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
